syntax = "proto3";

package logistics.api.v1;

import "google/api/annotations.proto";

option go_package="internal/generated/logistics/api/v1;logistics_v1";

// ---------------------------------------
// Service
// ---------------------------------------

// LogisticsEngineAPI
service LogisticsEngineAPI {
    // MoveUnit request will be send when unit moves in dimensions to new location.
    rpc MoveUnit(MoveUnitRequest) returns (DefaultResponse) {
        option (google.api.http) = {
            post: "/v1/cargo_unit/move"
        };
    }
    // UnitReachedWarehouse reports when unit reached warehouse to do something there.
    rpc UnitReachedWarehouse(UnitReachedWarehouseRequest) returns (DefaultResponse) {
        option (google.api.http) = {
            post: "/v1/warehouse/cargo_unit/reached"
        };
    }
    // MetricsReport reports when .
    rpc MetricsReport(DefaultRequest) returns (MetricsReportResponse) {
        option (google.api.http) = {
            post: "/v1/report"
        };
    }
}

// ---------------------------------------
// Requests
// ---------------------------------------

// MoveUnitRequest
message MoveUnitRequest {
    int64 cargo_unit_id = 1;
    Location location = 2;
}

// UnitReachedWarehouseRequest contains WarehouseAnnouncement with Location
message UnitReachedWarehouseRequest {
    Location location = 1;
    WarehouseAnnouncement announcement = 2;
}

// ---------------------------------------
// Responses
// ---------------------------------------

// DefaultResponse
message DefaultResponse {}

// DefaultRequest
message DefaultRequest {}

message DeliveryUnitsWarehouseReceivedTotalNumber {
    int64 warehouse_id = 1;
    int64 delivery_units_number = 2;
}

// MetricsReport
message MetricsReportResponse{
    int64 delivery_units_number = 1;
    repeated int64 warehouses_received_supplies_list = 2;
    repeated int64 delivery_units_reached_destination = 3;
    repeated DeliveryUnitsWarehouseReceivedTotalNumber delivery_units_each_warehouse_received_total_number = 4;
}

// ---------------------------------------
// Models
// ---------------------------------------

// WarehouseAnnouncement
message WarehouseAnnouncement {
    // cargo_unit_id is unique id
    int64 cargo_unit_id = 1;
    // warehouse_id is unique id
    int64 warehouse_id = 2;
    // the message contains information about the announcement
    string message = 3;
}

// Location where entity now located in X,Y Axis
message Location {
    uint32 Latitude = 1;
    uint32 Longitude = 2;
}
